# jav-organizer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  cli.md  db-migrations.md  development.md  getting-started.md  troubleshooting.md  web-ui.md
src/jav_toolkit/: __init__.py  cli.py  config.py  db.py  media.py  scraper.py  webapp.py
src/jav_toolkit/web/: __init__.py  dialogs.py  pages.py  processor.py  scanner.py  server.py  state.py
