[project]
name = "jav-toolkit"
version = "0.1.0"
description = "JAV metadata scraper and media downloader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.44",
]

[project.scripts]
jav-fetch = "jav_toolkit.scraper:main"
jav-media = "jav_toolkit.media:main"
jav-db    = "jav_toolkit.db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jav_toolkit"]
